fix CourseScoreCalculationServiceTest